@@ -19,6 +19,7 @@ PTXCONF_COLLECTION_MANUAL=y
 # PTXCONF_I2C_TOOLS is not set
 # PTXCONF_IPERF is not set
 PTXCONF_IPKG=y
+# PTXCONF_IWATCHER is not set
 # PTXCONF_LIBSIGCPP is not set
 # PTXCONF_LIBUIO is not set
 # PTXCONF_MBREF_UIO is not set
